# SubFinderX

./: .gitignore  README.md  __init__.py  cli.py  pyproject.toml  render.yaml  requirements.txt  subhunter.py
SubFinderX/: subhunter.py
SubFinderX/core/: __init__.py
SubFinderX/core/active/: bruteforce.py
SubFinderX/core/passive/: securitytrails.py  wayback.py
SubFinderX/core/utils/: config.py
backend/: app.py  report_generator.py  requirements.txt  scanner_wrapper.py
backend/wordlists/: default_wordlist.txt
core/: __init__.py
core/active/: __init__.py  bruteforce.py  dns_resolve.py  http_probe.py
core/passive/: __init__.py  chaos.py  crtsh.py  securitytrails.py  virustotal.py  wayback.py
core/utils/: __init__.py  db.py  dedupe.py  output.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: Charts.jsx  Dashboard.jsx  ResultsTable.jsx  ScanForm.jsx
subfinderx/: cli.py
subfinderx/core/passive/: __init__.py  chaos.py  crtsh.py  securitytrails.py  virustotal.py  wayback.py
subfinderx/core/utils/: db.py
subhunter/: SubHunter.code-workspace  __init__.py
subhunter/core/active/: __init__.py  dns_resolve.py  http_probe.py
subhunter/core/passive/: chaos.py  crtsh.py  virustotal.py
subhunter/core/utils/: __init__.py  config.py  dedupe.py  output.py
