[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subhunter"
version = "0.1.0"
description = "Modern asynchronous subdomain enumeration and tracking tool for penetration testing"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Laya Manoj" }
]

license = "MIT"

dependencies = [
  "httpx>=0.27.0",
  "dnspython>=2.6.0"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux"
]

[project.scripts]
subhunter = "subhunter.subhunter:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["subhunter*"]
