[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subfinderx"
version = "0.1.0"
description = "Modern subdomain enumeration tool for penetration testing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Laya Manoj" }]
license = "MIT"

dependencies = [
  "httpx>=0.27.0",
  "dnspython>=2.6.0",
]

[project.scripts]
subfinderx = "subfinderx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
